crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__patterns__when_bool_is_true.snap
---
source: crates/nash-codegen/src/build/tests/source/patterns.rs
assertion_line: 49
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nmain : bool\nmain =\n    case True of\n        True -> True\n        False -> fail\n"
---
--- unoptimized Core
let fromBool#2 : bool -> bool = \value#4 : bool -> value#4 in
let match#3 : bool = fromBool#2 true in
let main#1 : bool = case@Bool match#3 of
  False -> error
  True -> fromBool#2 true in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam fromBool_2
    [(lam match_3
      [(lam main_1 main_1) (case match_3 (error) [fromBool_2 (con bool True)])])
      [fromBool_2 (con bool True)]])
    (lam value_4 value_4)])
--- optimized Core
true
--- optimized UPLC
(program 1.1.0 (con bool True))
--- result
(con bool True)
--- logs
[]
--- budget
cpu: 288100, memory: 1900
