crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__patterns__when_tuple_deconstruction.snap
---
source: crates/nash-codegen/src/build/tests/source/patterns.rs
assertion_line: 91
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\ntype thing = Thing { idx : int }\ntype datum = A thing | B\ntype redSpend = Spend int | Buy\nmain : bool\nmain =\n    case (A (Thing { idx = 42 }), Buy) of\n        (A a, Spend x) ->\n            if equalsInteger a.idx x then True\n            else trace \"a.idx == x ? False\" False\n        (_, _) -> True\n"
---
--- unoptimized Core
let message#23 : string = "a.idx == x ? False" in
let fromInt#4 : int -> int = \value#19 : int -> value#19 in
let fromBool#7 : bool -> bool = \value#20 : bool -> value#20 in
let fromString#8 : string -> string = \value#21 : string -> value#21 in
let match#9 : (Main.datum, Main.redSpend) = constr 0 ((\field#2 : Main.thing -> constr 0 field#2) ((\field#3 : int -> constr 0 field#3) (fromInt#4 42))) (constr 1) in
let leaf#14 : @delay bool = delay (fromBool#7 true) in
let main#1 : bool = case@Tag match#9 of
  0 field#15 field#16 -> case@Tag field#15 of
    0 field#17 -> case@Tag field#16 of
      0 field#18 -> let a#5 : Main.thing = field#17 in
      let x#6 : int = field#18 in
      let projection#22 : int = field@0/1 a#5 in
      case@Bool equalsInteger projection#22 x#6 of
        True -> fromBool#7 true
        False -> trace (fromString#8 message#23) in fromBool#7 false
      1 -> force leaf#14
    1 -> force leaf#14 in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam message_23
    [(lam fromInt_4
      [(lam fromBool_7
        [(lam fromString_8
          [(lam match_9
            [(lam leaf_14
              [(lam main_1 main_1)
                (case
                  match_9
                  (lam field_15
                    (lam field_16
                      (case
                        field_15
                        (lam field_17
                          (case
                            field_16
                            (lam field_18
                              [(lam a_5
                                [(lam x_6
                                  [(lam projection_22
                                    (case
                                      [[(builtin equalsInteger) projection_22] x_6]
                                      (force
                                        [[(force (builtin trace)) [fromString_8 message_23]]
                                          (delay [fromBool_7 (con bool False)])])
                                      [fromBool_7 (con bool True)]))
                                    (case a_5 (lam generated_24 generated_24))])
                                  field_18])
                                field_17])
                            (force leaf_14)))
                        (force leaf_14)))))])
              (delay [fromBool_7 (con bool True)])])
            (constr 0
              [(lam field_2 (constr 0 field_2))
                [(lam field_3 (constr 0 field_3)) [fromInt_4 (con integer 42)]]]
              (constr 1))])
          (lam value_21 value_21)])
        (lam value_20 value_20)])
      (lam value_19 value_19)])
    (con string "a.idx == x ? False")])
--- optimized Core
let anf#40 : Main.thing = constr 0 42 in
let anf#41 : Main.datum = constr 0 anf#40 in
let anf#42 : Main.redSpend = constr 1 in
let match#29 : (Main.datum, Main.redSpend) = constr 0 anf#41 anf#42 in
let leaf#30 : @delay bool = delay true in
case@Tag match#29 of
  0 field#31 field#32 -> case@Tag field#31 of
    0 field#33 -> case@Tag field#32 of
      0 field#34 -> let projection#37 : int = field@0/1 field#33 in
      let anf#43 : bool = equalsInteger projection#37 field#34 in
      case@Bool anf#43 of
        True -> true
        False -> trace "a.idx == x ? False" in false
      1 -> force leaf#30
    1 -> force leaf#30
--- optimized UPLC
(program 1.1.0
  [(lam builtin_12
    [(lam anf_1
      [(lam anf_2
        [(lam anf_3
          [(lam match_4
            [(lam leaf_5
              (case
                match_4
                (lam field_6
                  (lam field_7
                    (case
                      field_6
                      (lam field_8
                        (case
                          field_7
                          (lam field_9
                            [(lam projection_10
                              [(lam anf_11
                                (case
                                  anf_11
                                  (force
                                    [[builtin_12 (con string "a.idx == x ? False")] (delay (con bool False))])
                                  (con bool True)))
                                [[(builtin equalsInteger) projection_10] field_9]])
                              (case field_8 (lam generated_13 generated_13))])
                          (force leaf_5)))
                      (force leaf_5))))))
              (delay (con bool True))])
            (constr 0 anf_2 anf_3)])
          (constr 1)])
        (constr 0 anf_1)])
      (constr 0 (con integer 42))])
    (force (builtin trace))])
--- result
(con bool True)
--- logs
[]
--- budget
cpu: 784100, memory: 5000
