crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__patterns__when_tuple_empty_lists.snap
---
source: crates/nash-codegen/src/build/tests/source/patterns.rs
assertion_line: 110
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nmain =\n    let\n        bucket1 : list int\n        bucket1 = [1, 2, 3]\n        bucket2 : list int\n        bucket2 = [1, 5, 6]\n        bye =\n            case (bucket1, bucket2) of\n                ([], _) -> False\n                (_, []) -> False\n                (a :: _, b :: _) -> equalsInteger a b\n    in\n    bye\n"
---
--- unoptimized Core
let fromBool#5 : bool -> bool = \value#16 : bool -> value#16 in
let fromInt#15 : int -> int = \value#17 : int -> value#17 in
let bucket2#2 : list int = mkCons (fromInt#15 1) (mkCons (fromInt#15 5) (mkCons (fromInt#15 6) (con (list integer) []))) in
let bucket1#3 : list int = mkCons (fromInt#15 1) (mkCons (fromInt#15 2) (mkCons (fromInt#15 3) (con (list integer) []))) in
let match#8 : (list int, list int) = constr 0 bucket1#3 bucket2#2 in
let bye#4 : bool = case@Tag match#8 of
  0 field#9 field#10 -> case@List field#9 of
    Nil -> fromBool#5 false
    Cons field#11 field#12 -> case@List field#10 of
      Nil -> fromBool#5 false
      Cons field#13 field#14 -> let a#6 : int = field#11 in
      let b#7 : int = field#13 in
      equalsInteger a#6 b#7 in
let main#1 : bool = bye#4 in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam fromBool_5
    [(lam fromInt_15
      [(lam bucket2_2
        [(lam bucket1_3
          [(lam match_8
            [(lam bye_4 [(lam main_1 main_1) bye_4])
              (case
                match_8
                (lam field_9
                  (lam field_10
                    (case
                      field_9
                      (lam field_11
                        (lam field_12
                          (case
                            field_10
                            (lam field_13
                              (lam field_14
                                [(lam a_6 [(lam b_7 [[(builtin equalsInteger) a_6] b_7]) field_13]) field_11]))
                            [fromBool_5 (con bool False)])))
                      [fromBool_5 (con bool False)]))))])
            (constr 0 bucket1_3 bucket2_2)])
          [[(force (builtin mkCons)) [fromInt_15 (con integer 1)]]
            [[(force (builtin mkCons)) [fromInt_15 (con integer 2)]]
              [[(force (builtin mkCons)) [fromInt_15 (con integer 3)]]
                (con (list integer) [])]]]])
        [[(force (builtin mkCons)) [fromInt_15 (con integer 1)]]
          [[(force (builtin mkCons)) [fromInt_15 (con integer 5)]]
            [[(force (builtin mkCons)) [fromInt_15 (con integer 6)]]
              (con (list integer) [])]]]])
      (lam value_17 value_17)])
    (lam value_16 value_16)])
--- optimized Core
let anf#38 : list int = mkCons 6 (con (list integer) []) in
let anf#39 : list int = mkCons 5 anf#38 in
let bucket2#22 : list int = mkCons 1 anf#39 in
let anf#43 : list int = mkCons 3 (con (list integer) []) in
let anf#44 : list int = mkCons 2 anf#43 in
let bucket1#23 : list int = mkCons 1 anf#44 in
let match#24 : (list int, list int) = constr 0 bucket1#23 bucket2#22 in
case@Tag match#24 of
  0 field#25 field#26 -> case@List field#25 of
    Nil -> false
    Cons field#27 field#28 -> case@List field#26 of
      Nil -> false
      Cons field#29 field#30 -> equalsInteger field#27 field#29
--- optimized UPLC
(program 1.1.0
  [(lam builtin_14
    [(lam partial_15
      [(lam anf_1
        [(lam anf_2
          [(lam bucket2_3
            [(lam anf_4
              [(lam anf_5
                [(lam bucket1_6
                  [(lam match_7
                    (case
                      match_7
                      (lam field_8
                        (lam field_9
                          (case
                            field_8
                            (lam field_10
                              (lam field_11
                                (case
                                  field_9
                                  (lam field_12 (lam field_13 [[(builtin equalsInteger) field_10] field_12]))
                                  (con bool False))))
                            (con bool False))))))
                    (constr 0 bucket1_6 bucket2_3)])
                  [partial_15 anf_5]])
                [[builtin_14 (con integer 2)] anf_4]])
              [[builtin_14 (con integer 3)] (con (list integer) [])]])
            [partial_15 anf_2]])
          [[builtin_14 (con integer 5)] anf_1]])
        [[builtin_14 (con integer 6)] (con (list integer) [])]])
      [builtin_14 (con integer 1)]])
    (force (builtin mkCons))])
--- result
(con bool True)
--- logs
[]
--- budget
cpu: 1990605, memory: 9693
